force-app/main/default/objects/CBK_OTP_Generado__c/CBK_OTP_Generado__c.object-meta.xml
<CustomObject>
    <label>OTP Generado</label>
    <nameField>
        <displayFormat>OTP-{0000}</displayFormat>
        <label>OTP Generado Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTP Generados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>