force-app/main/default/objects/CBK_OTP_Generado__c/fields/CBK_Codigo_OTP__c.field-meta.xml
<CustomField>
    <fullName>CBK_Codigo_OTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código OTP</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>