force-app/main/default/objects/CBK_OTP_Generado__c/fields/CBK_Fecha_Codigo_OTP__c.field-meta.xml
<CustomField>
    <fullName>CBK_Fecha_Codigo_OTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Código OTP</label>
    <type>DateTime</type>
</CustomField>