force-app/main/default/objects/CBK_OTP_Generado__c/fields/CBK_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CBK_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>OTP Generados</relationshipLabel>
    <relationshipName>OTP_Generados</relationshipName>
    <type>Lookup</type>
</CustomField>