force-app/main/default/objects/CBK_OTP_Generado__c/recordTypes/CSBD_Chat.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Chat</fullName>
    <active>true</active>
    <label>Chat</label>
</RecordType>